--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": "npm run lint:fix"
+    "postinstall": "npm run lint:fix",
+    "electron-rebuild": "electron-rebuild -v 2.0.4 -w opencv4nodejs"
   },
   "build": {
     "productName": "home-assistant",
@@ -53,7 +54,9 @@
     }
   },
   "dependencies": {
+    "electron-prebuilt": "^1.4.13",
     "eslint-plugin-vue": "^4.7.1",
+    "opencv4nodejs": "^4.9.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6"
   },
@@ -78,6 +81,7 @@
     "electron-builder": "^20.19.2",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
+    "electron-rebuild": "^1.8.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^3.1.0",
